hphp/hack/test/typecheck/const_attribute/redeclare_from_const.php.exp
File "redeclare_from_const.php", line 5, characters 7-7:
Class D does not correctly implement all required members  (Typing[4204])
File "redeclare_from_const.php", line 5, characters 17-17:
Some members are incompatible with those declared in type C
Read the following to see why:
File "redeclare_from_const.php", line 4, characters 33-35:
This property is __Const
File "redeclare_from_const.php", line 5, characters 28-30:
This property is not __Const
